# pipeline

./: DockerCompose.yaml  README.md  Table Structure.drawio  descriptions.md  requirements.txt
00_infrastructure/airbyte/: .env  DockerCompose_airbyte.yaml
01_data_generation/: data_gen_and_seed.py  mysql_connection.py
02_transformation/dbt_visits/: dbt_project.yml  profiles.yml
02_transformation/dbt_visits/macros/: visits_joined_column_macro.sql
02_transformation/dbt_visits/models/base/: base_visits_facility.sql  base_visits_patient_diagnosis.sql  base_visits_patient_disability.sql  base_visits_patient_visit.sql  base_visits_patient_visit_details.sql  base_visits_patient_visit_pds_care_provider.sql  sources.yml
03_orchestration/my_dagster/: .gitignore  README.md
03_orchestration/my_dagster/my_dagster.egg-info/: top_level.txt
03_orchestration/visits_dagster/: pyproject.toml  setup.py
03_orchestration/visits_dagster/visits_dagster/: constants.py  definitions.py
Chapter1/: DataGenClasses.py  data_gen_and_seed.py  data_gen_and_stream.py
Chapter1/demo-pipeline/: README.md  pyproject.toml  setup.cfg  setup.py
Chapter1/demo-pipeline/demo_pipeline/: __init__.py  data_gen_and_seed.py  sensors.py
Chapter2/dbt_visits/: .user.yml
Chapter3/my_dagster/: .gitignore  dagster.yaml  pyproject.toml  setup.cfg  setup.py
Chapter3/my_dagster/my_dagster/: __init__.py
Chapter3/my_dagster/my_dagster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
DataGenerator/: taxi_trip.py
mysql_configs/: my.cnf
scripts.d/: ClickHouse statements.sql  MySQL statements.sql
(+8 files in other folders)
